--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.6",
+    "aos": "^2.3.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
